Carbon Bot is now on all pages (optionnaly)

--- a/templates/backOffice/default/paygreen-climatekit/module-configuration.html
+++ b/templates/backOffice/default/paygreen-climatekit/module-configuration.html
@@ -37,6 +37,7 @@
                             <div class="col-md-4">
                                 <p class="title title-without-tabs">{intl d='paygreenclimatekit.bo.default' l="Operation mode"}</p>
                                 {render_form_field field="mode" value=$mode}
+                                {render_form_field field="showCarbonBotOnAllPages" value=$showCarbonBotOnAllPages}
                                 {render_form_field field="transportationExternalId" value=$transportationExternalId|default}
                             </div>
                             <div class="col-md-4">
