fix changing association not showed correctly

--- a/templates/frontOffice/default/paygreen-climatekit/main.body-bottom.html
+++ b/templates/frontOffice/default/paygreen-climatekit/main.body-bottom.html
@@ -24,6 +24,7 @@
     // MODERN template
     if (checkoutFlow) {
         template = 'modern';
+        div.style.position = 'relative';
         urlAddContribution = "paygreen/modern/compensation/add";
         urlRemoveContribution = "paygreen/modern/compensation/remove";
         const classToCheck = "PhoneCheck";
@@ -45,10 +46,10 @@
                 }
         });
 
-        const config = { childList: false, subtree: true, attributes: true, attributeFilter: [ 'class'], };
+        const config = { subtree: true, attributes: true, attributeFilter: ['class'], };
         observer.observe(document.getElementById('Checkout'), config);
     }
-    /***/
+    /**/
 
     {if $app->debug}
         console.log('user:{$paygreenUser}, footprint:{$paygreenFootprintId}, token:{$paygreenToken}');
@@ -98,25 +99,28 @@
                         })
                         .catch(console.log);
                     },
-                    removeContributionAction: function() {
-                        if ('default' === template) {
-                            window.location.replace(
-                                "{url path='__URL__'}".replace('__URL__', urlRemoveContribution)
-                            );
-                            return;
-                        }
+                    removeContributionAction: function(hasPrice) {
+                        // prevent off and on if changing association
+                        if (hasPrice) {
+                            if ('default' === template) {
+                                window.location.replace(
+                                    "{url path='__URL__'}".replace('__URL__', urlRemoveContribution)
+                                );
+                                return;
+                            }
 
-                        fetch("{url path='__URL__'}".replace('__URL__', urlRemoveContribution))
-                        .then((_) => {
-                            // on utilise le flow de react pour invalider le cart et le mettre à jour pour être synchro avec le back
-                            window.apiUtils.queryClient.invalidateQueries('cart');
-                            carbonBot.updateConfig({
-                                banner: {
-                                    hasContributionInCart: false
-                                }
-                            });
-                        })
-                        .catch(console.log);
+                            fetch("{url path='__URL__'}".replace('__URL__', urlRemoveContribution))
+                            .then((_) => {
+                                // on utilise le flow de react pour invalider le cart et le mettre à jour pour être synchro avec le back
+                                window.apiUtils.queryClient.invalidateQueries('cart');
+                                carbonBot.updateConfig({
+                                    banner: {
+                                        hasContributionInCart: false
+                                    }
+                                });
+                            })
+                            .catch(console.log);
+                        }
                     },
                     hasContributionInCart: {($paygreenContributionInCart) ? 'true' : 'false'}, // boolean, whether the contribution is in the cart or not
                     displayed: showBannerWidget
